force-app/main/default/objects/Holder_Additional_Codes_Detail__c/Holder_Additional_Codes_Detail__c.object-meta.xml
<CustomObject>
    <label>Holder Additional Codes Detail</label>
    <nameField>
        <label>Holder Additional Codes Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Additional Codes Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>