force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/BodyAC__c.field-meta.xml
<CustomField>
    <fullName>BodyAC__c</fullName>
    <label>BodyAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>