force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/CapscrewAC__c.field-meta.xml
<CustomField>
    <fullName>CapscrewAC__c</fullName>
    <label>CapscrewAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>