force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/ClampAC__c.field-meta.xml
<CustomField>
    <fullName>ClampAC__c</fullName>
    <label>ClampAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>