force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <label>CodeType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>