force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/CompanionFlangeAC__c.field-meta.xml
<CustomField>
    <fullName>CompanionFlangeAC__c</fullName>
    <label>CompanionFlangeAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>