force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/ExcessFlowAC__c.field-meta.xml
<CustomField>
    <fullName>ExcessFlowAC__c</fullName>
    <label>ExcessFlowAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>