force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/EyeboltsAC__c.field-meta.xml
<CustomField>
    <fullName>EyeboltsAC__c</fullName>
    <label>EyeboltsAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>