force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/GasketAC__c.field-meta.xml
<CustomField>
    <fullName>GasketAC__c</fullName>
    <label>GasketAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>