force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/GaugeAC__c.field-meta.xml
<CustomField>
    <fullName>GaugeAC__c</fullName>
    <label>GaugeAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>