force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/InletAC__c.field-meta.xml
<CustomField>
    <fullName>InletAC__c</fullName>
    <label>InletAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>