force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/JackscrewAC__c.field-meta.xml
<CustomField>
    <fullName>JackscrewAC__c</fullName>
    <label>JackscrewAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>