force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/KnifebladeAC__c.field-meta.xml
<CustomField>
    <fullName>KnifebladeAC__c</fullName>
    <label>KnifebladeAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>