force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/MidFlangAC__c.field-meta.xml
<CustomField>
    <fullName>MidFlangAC__c</fullName>
    <label>MidFlangAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>