force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/NutAC__c.field-meta.xml
<CustomField>
    <fullName>NutAC__c</fullName>
    <label>NutAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>