force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/OutletAC__c.field-meta.xml
<CustomField>
    <fullName>OutletAC__c</fullName>
    <label>OutletAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>