force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/RingAC__c.field-meta.xml
<CustomField>
    <fullName>RingAC__c</fullName>
    <label>RingAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>