force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/StudsAC__c.field-meta.xml
<CustomField>
    <fullName>StudsAC__c</fullName>
    <label>StudsAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>