force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/TeeHandAC__c.field-meta.xml
<CustomField>
    <fullName>TeeHandAC__c</fullName>
    <label>TeeHandAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>