force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/Text4Val__c.field-meta.xml
<CustomField>
    <fullName>Text4Val__c</fullName>
    <label>Text4Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>