force-app/main/default/objects/Holder_Additional_Codes_Detail__c/fields/Text6Val__c.field-meta.xml
<CustomField>
    <fullName>Text6Val__c</fullName>
    <label>Text6Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>