force-app/main/default/objects/Holder_Additional_Codes_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BodyAC__c</columns>
    <columns>CapscrewAC__c</columns>
    <columns>CompanionFlangeAC__c</columns>
    <columns>EyeboltsAC__c</columns>
    <columns>ExcessFlowAC__c</columns>
    <columns>GasketAC__c</columns>
    <columns>GaugeAC__c</columns>
    <columns>InletAC__c</columns>
    <columns>JackscrewAC__c</columns>
    <columns>KnifebladeAC__c</columns>
    <columns>MidFlangAC__c</columns>
    <columns>NutAC__c</columns>
    <columns>OutletAC__c</columns>
    <columns>Text1Val__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>